tests/Spire.Analyzers.Tests/SPIRE003/cases/Detect_RecordStruct_ExplicitDefault.cs
//@ should_fail
// Ensure that SPIRE003 IS triggered when default(MustInitRecordStruct) is used in a local variable.
public class Detect_RecordStruct_ExplicitDefault
{
    public void Method()
    {
        var s = default(MustInitRecordStruct); //~ ERROR
    }
}
